// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme mount basic 1`] = `
<Greeting>
  <div
    css="unknown styles"
  >
    <div
      className="css-tjt4gv-Greeting"
    >
      hello
    </div>
  </div>
</Greeting>
`;

exports[`enzyme mount empty styled 1`] = `
<Greeting>
  <div
    className="css-1k6nb1k-Greeting emotion-0"
  >
    Hello
  </div>
</Greeting>
`;

exports[`enzyme mount nested 1`] = `
<div>
  <Greeting>
    <div
      css="unknown styles"
    >
      <div
        className="css-tjt4gv-Greeting"
      >
        hello
      </div>
    </div>
  </Greeting>
</div>
`;

exports[`enzyme mount nested styled 1`] = `
<div>
  <Greeting>
    <div
      className="css-1udkkc1-Greeting emotion-0"
    >
      Hello
    </div>
  </Greeting>
</div>
`;

exports[`enzyme mount styled 1`] = `
<Greeting>
  <div
    className="css-1udkkc1-Greeting emotion-0"
  >
    Hello
  </div>
</Greeting>
`;

exports[`enzyme mount theming 1`] = `
.emotion-0 {
  color: red;
  border: 2px solid red;
}

<div>
  <Button
    theme={
      Object {
        "main": "red",
      }
    }
  >
    <button
      className="emotion-0 emotion-1"
    >
      Normal
    </button>
  </Button>
  <ThemeProvider
    theme={
      Object {
        "main": "blue",
      }
    }
  >
    <Button
      theme={
        Object {
          "main": "red",
        }
      }
    >
      <button
        className="emotion-0 emotion-1"
      >
        Themed
      </button>
    </Button>
  </ThemeProvider>
</div>
`;

exports[`enzyme mount with prop containing css element 1`] = `
<Greeting
  content={
    <p
      css="unknown styles"
    >
      Hello
    </p>
  }
>
  <div>
    <p
      css="unknown styles"
    >
      <p
        className="css-f9xk9e"
      >
        Hello
      </p>
    </p>
     
    World!
  </div>
</Greeting>
`;

exports[`enzyme mount with prop containing css element not at the top level 1`] = `
<div>
  <Greeting
    content={
      <p
        css="unknown styles"
        id="something"
      >
        Hello
      </p>
    }
  >
    <div>
      <p
        css="unknown styles"
        id="something"
      >
        <p
          className="css-f9xk9e"
          id="something"
        >
          Hello
        </p>
      </p>
       
      World!
    </div>
  </Greeting>
</div>
`;

exports[`enzyme mount with prop containing css element with other label 1`] = `
<Greeting
  content={
    <p
      css="unknown styles"
      id="something"
    >
      Hello
    </p>
  }
>
  <Thing
    content={
      <div
        css="unknown styles"
      />
    }
  >
    <p
      css="unknown styles"
      id="something"
    >
      <p
        className="css-f9xk9e"
        id="something"
      >
        Hello
      </p>
    </p>
     
    World!
  </Thing>
</Greeting>
`;

exports[`enzyme mount with prop containing css element with other props 1`] = `
<Greeting
  content={
    <p
      css="unknown styles"
      id="something"
    >
      Hello
    </p>
  }
>
  <div>
    <p
      css="unknown styles"
      id="something"
    >
      <p
        className="css-f9xk9e"
        id="something"
      >
        Hello
      </p>
    </p>
     
    World!
  </div>
</Greeting>
`;

exports[`enzyme mount with styles on top level 1`] = `
<Greeting
  css="unknown styles"
>
  <Greeting
    className="css-f5yfbg"
  >
    <div
      className="css-f5yfbg"
    >
      Hello
    </div>
  </Greeting>
</Greeting>
`;

exports[`enzyme shallow basic 1`] = `
<div
  css="unknown styles"
>
  hello
</div>
`;

exports[`enzyme shallow empty styled 1`] = `
<div
  className="css-1k6nb1k-Greeting emotion-0"
>
  Hello
</div>
`;

exports[`enzyme shallow nested 1`] = `
<div>
  <Greeting>
    hello
  </Greeting>
</div>
`;

exports[`enzyme shallow nested styled 1`] = `
<div>
  <Greeting>
    Hello
  </Greeting>
</div>
`;

exports[`enzyme shallow styled 1`] = `
.emotion-0 {
  background-color: red;
}

<div
  className="emotion-0 emotion-1"
>
  Hello
</div>
`;

exports[`enzyme shallow theming 1`] = `
<div>
  <Button
    theme={
      Object {
        "main": "red",
      }
    }
  >
    Normal
  </Button>
  <ThemeProvider
    theme={
      Object {
        "main": "blue",
      }
    }
  >
    <Button
      theme={
        Object {
          "main": "red",
        }
      }
    >
      Themed
    </Button>
  </ThemeProvider>
</div>
`;

exports[`enzyme shallow with prop containing css element 1`] = `
<div>
  <p
    css="unknown styles"
  >
    Hello
  </p>
   
  World!
</div>
`;

exports[`enzyme shallow with prop containing css element not at the top level 1`] = `
<div>
  <Greeting
    content={
      <p
        css="unknown styles"
        id="something"
      >
        Hello
      </p>
    }
  >
    World!
  </Greeting>
</div>
`;

exports[`enzyme shallow with prop containing css element with other label 1`] = `
<Thing
  content={
    <div
      css="unknown styles"
    />
  }
>
  <p
    css="unknown styles"
    id="something"
  >
    Hello
  </p>
   
  World!
</Thing>
`;

exports[`enzyme shallow with prop containing css element with other props 1`] = `
<div>
  <p
    css="unknown styles"
    id="something"
  >
    Hello
  </p>
   
  World!
</div>
`;

exports[`enzyme shallow with styles on top level 1`] = `
.emotion-0 {
  background-color: red;
}

<Greeting
  className="emotion-0"
>
  Hello
</Greeting>
`;

exports[`enzyme shallow with tickling basic 1`] = `
.emotion-0 {
  background-color: red;
}

<div
  className="emotion-0"
>
  hello
</div>
`;

exports[`enzyme shallow with tickling empty styled 1`] = `
<div
  className="css-1k6nb1k-Greeting emotion-0"
>
  Hello
</div>
`;

exports[`enzyme shallow with tickling nested 1`] = `
<div>
  <Greeting>
    hello
  </Greeting>
</div>
`;

exports[`enzyme shallow with tickling nested styled 1`] = `
<div>
  <Greeting>
    Hello
  </Greeting>
</div>
`;

exports[`enzyme shallow with tickling styled 1`] = `
<div
  className="css-1udkkc1-Greeting emotion-0"
>
  Hello
</div>
`;

exports[`enzyme shallow with tickling theming 1`] = `
<div>
  <Button
    theme={
      Object {
        "main": "red",
      }
    }
  >
    Normal
  </Button>
  <ThemeProvider
    theme={
      Object {
        "main": "blue",
      }
    }
  >
    <Button
      theme={
        Object {
          "main": "red",
        }
      }
    >
      Themed
    </Button>
  </ThemeProvider>
</div>
`;

exports[`enzyme shallow with tickling with prop containing css element 1`] = `
.emotion-0 {
  background-color: blue;
}

<div>
  <p
    className="emotion-0"
  >
    Hello
  </p>
   
  World!
</div>
`;

exports[`enzyme shallow with tickling with prop containing css element not at the top level 1`] = `
<div>
  <Greeting
    content={
      <p
        css="unknown styles"
        id="something"
      >
        Hello
      </p>
    }
  >
    World!
  </Greeting>
</div>
`;

exports[`enzyme shallow with tickling with prop containing css element with other label 1`] = `
<Thing
  content={
    <div
      css="unknown styles"
    />
  }
>
  <p
    css="unknown styles"
    id="something"
  >
    Hello
  </p>
   
  World!
</Thing>
`;

exports[`enzyme shallow with tickling with prop containing css element with other props 1`] = `
<div>
  <p
    css="unknown styles"
    id="something"
  >
    Hello
  </p>
   
  World!
</div>
`;

exports[`enzyme shallow with tickling with styles on top level 1`] = `
<Greeting
  className="css-f5yfbg"
>
  Hello
</Greeting>
`;

exports[`enzyme with prop containing css element in fragment 1`] = `
.emotion-0 {
  background-color: blue;
}

<div>
  x
  Array [
    <div
      className="emotion-0"
    >
      y
    </div>,
  ]
</div>
`;
